scss/templates/_connection-landing.scss
// ==========================================================================
// Jetpack Connection Landing Page ('Please connect jetpack')
//===========================================================================

// Variables specific to connection landing page

// layout
$j-gutter: em(20px);

// color
$landing-bdr: #D9D9D9;
$gray-light: #f4f4f4;

@mixin jp-card {
	background: $white;
	border: 1px $landing-bdr solid;
	text-align: center;
	p {
		font-size: em(16px);
	}
}

@mixin jp-card-cta {
	text-align: center;
	p {
		font-size: em(16px);
	}
}

.connection-landing {
	text-align: center;

	h1 {
		margin-bottom: 0;
	}
	h2 {
		margin: 0;
		padding: $j-gutter*.8 0;
		font-size: em(22px);
		line-height: 160%;
		font-weight: 400;
	}
	h2 + p {
		margin-top: 0;
	}
	p {
		color: $gray-med;
	}
} // connection-landing

.connect-card {
	@include jp-card-cta;
	margin: $j-gutter*1.5 auto $j-gutter;
	padding: 0 $j-gutter*3 $j-gutter;
	@include breakpoint(tablet) { padding: 0 $j-gutter $j-gutter; }
}

.jp-card {
	@include jp-card;
	margin-bottom: $j-gutter*2;
	.j-int {
		padding: 0 $j-gutter*3;
	}
}

/* ==================
The following header part is a little hacky. Certain versions of IE were having a difficult time processing multiple svg BG images.
So I moved to stack the svgs as actual imgs instead. IE also had a hard time dealing with em(px) conversions for sizing. - golenski 
*/

.feature-container {
	background: $gray-light;

	.j-int {
		background: $white;
		padding: 0;
	}

	.first-header {
		position: relative;

		@include breakpoint(desktop) { 
			border-bottom: 1px $landing-bdr solid;
			background-image: none;

			.j-header-img {
				display: none;
			}
		} // < desktop

		@include minbreakpoint(desktop) {
			background:
				url('../images/connection-landing/stars-right.svg') no-repeat,
				url('../images/connection-landing/stars-left.svg') no-repeat,
				$white;
			background-position: 90% 50%, 10% 50%;
			background-size: 100px, 125px;
		} // > desktop

		.j-header-img {
			position: absolute;
			left: 0; right: 0; bottom: 0;

			img {
				margin: 0 auto;
				max-width: 100%;
				z-index: 1001;
				position: absolute;
				left: 0; right: 0; bottom: 0;
				&:first-of-type {
					@include minbreakpoint(desktop) { bottom: -12px; }
					@include minbreakpoint(large-desktop) { bottom: -10px; }
				}
			}

			img + img {
				z-index: 999;
			}
		}
	}
	.secondary-header {
		background: transparent;
		padding: 0 $j-gutter*7;
	}
	.j-feature-img {
		padding: 0 $j-gutter;
		margin-bottom: $j-gutter*2;
		img {
			width: 100%;
		}
		&:last-of-type {
			margin-bottom: $j-gutter;
		}
	}
}

// Adjust the padding for each specific header img
.j-traffic {
	.first-header {
		@include minbreakpoint(desktop) { padding-bottom: 200px; }
	}
}

.j-security {
	.first-header {
		@include minbreakpoint(desktop) { padding-bottom: 225px; }
	}
} // .j-security

// ================== End hacky stuff

.three-feature {
	margin: $j-gutter 0;
	padding: 0 $j-gutter;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	@include breakpoint(large-phone) { padding: 0; }

	.j-col {
		border: 1px $landing-bdr solid;
		text-align: left;
		padding: 0;
		background: $clouds;
		@include breakpoint(tablet) { margin-bottom: $j-gutter; }
		@include breakpoint(large-phone) { border-left: none; border-right: none; }
	}
	.j-col:nth-of-type(2) {
		border-left: none;
		border-right: none;
		@include breakpoint(tablet) { border: 1px $landing-bdr solid; }
		@include breakpoint(large-phone) { border-left: none; border-right: none; }
	}
	h3 {
		font-weight: 600;
		font-size: em(16px);
		min-width: em(215px);
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		@include breakpoint(tablet) { font-size: em(14px); }
	}
	.feature-img {
		background: $white;
		border-bottom: 1px $landing-bdr solid;
		text-align: center;
		img {
			width: 100%;
			max-width: 500px;
			margin: 0 auto;
		}
	}
	p {
		line-height: 150%;
		padding-bottom: 0;
		font-size: em(14px);
	}
	h3, p {
		margin: 0;
		padding: $j-gutter/2;
		@include breakpoint(tablet) { font-size: em(13px); }
	}
	h3 {
		padding-bottom: 0;
	}
}


// ==========================================================================
// Jetpack NUX Page(s) (main jetpack admin page + jumpstart)
//===========================================================================

// Needs to be cleaned. Let's remove those important tags and unneeded classes that we can utilize from core. Properly nest elements. migrate into _main.scss
// Once everything is tested, I'll remove all the comments below as well. - @jeffgolenski

// wrapping these common element names temporarily until I can audit - jeff
.jp-content {
	.hide {
		display: none;
	}
	.pointer {
		cursor: pointer;
	}
	.landing {
		margin: 0 auto;
		z-index: 2;
		position: relative;
	}
	h1 {
		font: 400 1.75em "proxima-nova","Open Sans",Helvetica,Arial,sans-serif;
		position: relative;
		z-index: 3;
		width: 100%;
		text-align: center;
		&.success {
			color: $green;
		}
	}
	.footer {
		padding-top: 0;
		margin-top: 0;
		background-image: none;
		&:before {
			height: inherit;
		}
	}
	.more-info:before {
		content: none;
	}
} //.jp-content

.landing {
	.wpcom-connect {
		min-height: 400px;
	}
}

.wpcom-connect {
	.j-col {
		padding: 0;
	}
	.connect-desc {
		padding-right: 25px;
	}
	.connect-btn {
		text-align: center;
	}
}

.module-grid h2 {
	color: #000;
	font: 300 2.57143em/1em "proxima-nova","Open Sans",Helvetica,Arial,sans-serif;
}

// place button styles in _button.scss
.download-jetpack {
	margin-top: 1em!important;
}


.jump-start-area {
	@include jp-card;
	padding: 0 $j-gutter;

	h1 {
		margin: 1em auto 0;
	}
}

.jumpstart-message {
	p {
		padding-right: 25px;
	}
}

.jumpstart-desc {
	text-align: left;
}

#jumpstart-cta {
	text-align: center;
	display:inline-block;
	float:none
}

.dismiss-jumpstart {
	color: #999;
	font-size: 14px;
}
/* ... */

